# ssl-py-tools

./: .gitignore  .pre-commit-config.yaml  flake8.cfg  mypy.ini
cmmus_gym/: pyproject.toml  setup.py
cmmus_gym/cmmus_gym/: actions.py  env.py  observations.py  version.py
cmmus_gym/cmmus_gym/actions/: __init__.py  core.py  threaded.py  trio.py
cmmus_gym/cmmus_gym/env/: __init__.py  core.py  threaded.py  trio.py
cmmus_gym/cmmus_gym/observations/: core.py  threaded.py  trio.py
cmmus_gym/examples/: raw_movement_action_client.py  raw_vision_observations.py  run_async_raw_movement_env.py  run_raw_movement_env.py
cmmus_gym/proto/ssl/: radio.proto
cmmus_gym/tests/: test_observations.py  test_raw_movement_action.py  test_single_robot_movement_env.py
cmmus_gym/tests/actions/threaded/: test_raw_movement_action_client.py
cmmus_gym/tests/actions/trio/: test_raw_movement_action.py
cmmus_gym/tests/env/threaded/: test_threaded_single_robot_raw_movement_env.py
cmmus_gym/tests/env/trio/: test_single_robot_movement_env.py
cmmus_gym/tests/observations/threaded/: test_raw_vision_observations.py
cmmus_gym/tests/observations/trio/: test_raw_vision_observation.py
vision_filter/: flake8.cfg  pyproject.toml  setup.py
vision_filter/config/: constant-vel-ball.jsonnet  div_a_field.jsonnet  static-ball.jsonnet
vision_filter/proto/: filter_visualizer.proto
vision_filter/proto/ssl/detection/: detection.proto
vision_filter/proto/ssl/field/: geometry.proto
vision_filter/scripts/: hello_grpclib.py  hello_imgui.py  hello_pyglet.py
vision_filter/vision_filter/: util.py
vision_filter/vision_filter/filter/: ball.py  robot.py
vision_filter/vision_filter/net/: __init__.py  ssl_vision_client.py  ssl_vision_server.py
vision_filter/vision_filter/scripts/: vision_filter.py  visualizer.py
vision_filter/vision_filter/ui/: ball_filter_controls.py  draw_options_editor.py  field_geometry_editor.py  grpc.py  pyglet.py  util.py  visualizer.py
