[tool.poetry]
name = "cmmus_gym"
version = "0.1.0"
description = "OpenAI Gym environments for learning with the real robots."
authors = "Devin Schwab <dschwab@andrew.cmu.edu>"
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"
gym = "^0.15.3"

[tool.poetry.dev-dependencies]
pyls-black = "^0.4.4"
pytest = "^5.2"
python-language-server = {version = "^0.29.1", extras = ["flake8", "pydocstyle", "rope", "test"]}
pyls-isort = "^0.1.1"
pyls-mypy = "^0.1.8"
mypy = "^0.730.0"
ipython = "^7.8"
jupyter = "^1.0"
pudb = "^2019.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"