[tool.poetry]
name = "cmmus_gym"
version = "0.1.0"
description = "OpenAI Gym environments for learning with the real robots."
authors = "Devin Schwab <dschwab@andrew.cmu.edu>"
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"
gym = "^0.15.3"
structlog = "^19.2"
numpy = "^1.17"
trio = "^0.12.1"
vision_filter = {path = "../vision_filter"}
[tool.poetry.dev-dependencies]
pyls-black = "^0.4.4"
pytest = "^5.2"
python-language-server = {version = "^0.29.1", extras = ["flake8", "pydocstyle", "rope", "test"]}
pyls-isort = "^0.1.1"
pyls-mypy = "^0.1.8"
mypy = "^0.730.0"
ipython = "^7.8"
jupyter = "^1.0"
pudb = "^2019.1"
pyls-flake8 = {git = "https://github.com/emanspeaks/pyls-flake8.git"}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"