[tool.poetry]
name = "vision_filter"
version = "0.1.0"
description = "Filtering and visualization for SSL-Vision data"
authors = ["Devin Schwab <dschwab@andrew.cmu.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"
grpclib = {version = "^0.3.0", allows-prereleases = true}
imgui = {version = "^1.0", extras = ["pyglet"]}
protobuf = "^3.10"
protobuf-gen = "^0.0.4"
click = "^7.0"
structlog = "^19.2"
colorama = "^0.4.1"
grpcio = "^1.24"
grpcio-reflection = "^1.24"
numpy = "^1.17"
filterpy = "^1.4"
sympy = "^1.4"
trio = "^0.12.1"
BTrees = "^4.6"
outcome = "^1.0"

[tool.poetry.dev-dependencies]
pyls-black = "^0.4.4"
pytest = "^5.2"
python-language-server = {version = "^0.29.1", extras = ["flake8", "pydocstyle", "rope", "test"]}
pyls-isort = "^0.1.1"
pyls-mypy = "^0.1.8"
mypy = "^0.730.0"
ipython = "^7.8"
jupyter = "^1.0"
pudb = "^2019.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
